[gd_scene load_steps=12 format=3 uid="uid://cw32lljoy5qpi"]

[ext_resource type="Script" uid="uid://bp86kc0k7pfr5" path="res://Scripts/Monsters/enemy_controller.gd" id="1_uq2xv"]
[ext_resource type="PackedScene" uid="uid://kg76jqturayc" path="res://Scenes/Components/Effects/LootItem.tscn" id="2_0ouli"]
[ext_resource type="Script" uid="uid://b3l5fu3stpcfi" path="res://Scripts/Monsters/monster_state_machine.gd" id="2_sw3yv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uq2xv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sw3yv"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ouli"]
radius = 25.0
height = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3byci"]
size = Vector2(200, 200)

[sub_resource type="Gradient" id="Gradient_sw3yv"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.1882353, 0.1882353, 0.1882353, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sw3yv"]
gradient = SubResource("Gradient_sw3yv")

[sub_resource type="Gradient" id="Gradient_uq2xv"]
offsets = PackedFloat32Array(0.9705882)
colors = PackedColorArray(0, 0.7294118, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0ouli"]
gradient = SubResource("Gradient_uq2xv")

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_uq2xv")
loot_scene = ExtResource("2_0ouli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_uq2xv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sw3yv")
animation = &"idle"

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CapsuleShape2D_0ouli")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_3byci")

[node name="FloorRay" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 20)

[node name="HealthBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(100, 10)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = 70.0
offset_right = 50.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_sw3yv")
texture_progress = SubResource("GradientTexture1D_0ouli")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_sw3yv")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
